feat : add images, links and titles in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <section>
+        <h3>Healthy pancakes</h3>
+        <img src="./img/pancake.jpg" alt="De délicieux pancakes diététiques" height="180" width="140" >
+        <p><a href="./recipes/pancake.html" target="_blank">voir la recette</a></p>
+    </section>
+    <section>
+        <h3>Fondant au chocolat</h3>
+        <img src="./img/lavacake.jpg" alt="Un fondant au chocolat extrêmement savoureux" height="180" width="200">
+        <p><a href="./recipes/fondant.html" target="_blank">voir la recette</a></p>
+    </section>
+    <section>
+        <h3>Brownies au chocolat</h3>
+        <img src="./img/brownies.jpg" alt="Des brownies très moelleux" height="180" width="180">
+        <p><a href="./recipes/brownies.html" target="_blank">voir la recette</a></p>
+    </section>
 </body>
 </html>
