feat : edit index.html and pancake.html
change the names of the titles in the <a> of index.html
add images, description, ingrédients and steps in pancake.html

--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -6,6 +6,36 @@
     <title>Healthy pancakes</title>
 </head>
 <body>
+    <h1>Healthy pancakes</h1>
+    <img src="../img/pancake.jpg" alt="De délicieux pancakes diététiques" height="400" width="350">
+    <p>Des pancakes idéales pour un régime alimentaire sain et équilibré</p>
+    <p><strong>Glucides:</strong> 59,4g  <strong>Lipides:</strong> 15,5g  <strong>Protéines:</strong> 36,4g</p>
+    <p><strong>Total Calories:</strong> 532 cal</p>
+    <section>
+        <h2>Ingrédients (pour 6 pancakes)</h2>
+        <ul>
+            <li>75g de flocon d'avoine ou de farine d'avoine</li>
+            <li>100g de blanc d'œuf</li>
+            <li>1 jaune d'œuf</li>
+            <li>155g de fromage blanc (ou de yaourt grec)</li>
+            <li>5g de levure chimique</li>
+            <li>10ml d'extrait de vanille ou 5ml d'alcool de votre choix (Rhum, bière, eau de vie, etc) suivant votre préférence de goût</li>
+            <li>Du beurre ou de l'huile pour la cuisson</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Les étapes à suivre:</h2>
+        <ol>
+            <li>Dans un mixeur, ajouter les flocons d'avoines et la levure.</li>
+            <li>Incorporer ensuite les blancs et le jaune d'œufs.</li>
+            <li>Ajouter ensuite le fromage blanc.</li>
+            <li>Pour terminer, verser la vanille puis laisser mélanger 30sec à 1 minutes.</li>
+            <li>Faire bien chauffer la poêle puis la graisser légèrement.</li>
+            <li>Sur feux doux, verser un peu de pâte au centre de la poêle. </li>
+            <li>Lorsque de petites bulles commence à se former, retourner le pancake à l'aide d'une spatule puis laisser de nouveau cuir 1m30 à 2 minutes.</li>
+            <li>Une fois cuit, servir avec l'accompagnement de votre choix (sirop d'érable, pâte à tartiner, etc).</li>
+        </ol>
+    </section>
     
 </body>
 </html>
