docs : correct the description

--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Healthy pancakes</h1>
     <img src="../img/pancake.jpg" alt="De délicieux pancakes diététiques" height="400" width="350">
-    <p>Des pancakes idéales pour un régime alimentaire sain et équilibré</p>
+    <p>Des pancakes pour un régime alimentaire sain et équilibré</p>
     <p><strong>Glucides:</strong> 59,4g  <strong>Lipides:</strong> 15,5g  <strong>Protéines:</strong> 36,4g</p>
     <p><strong>Total Calories:</strong> 532 cal</p>
     <section>
