feat : add all infos and image in fondant.html

--- a/recipes/fondant.html
+++ b/recipes/fondant.html
@@ -6,6 +6,35 @@
     <title>Fondant au chocolat</title>
 </head>
 <body>
-    
+    <h1>Fondant au chocolat</h1>
+    <img src="../img/lavacake.jpg" alt="Un fondant au chocolat extrêmement savoureux" height="380" width="400">
+    <p>Un magnifique fondant au chocolat à en faire saliver vos papilles.</p>
+    <p><strong>Glucides:</strong> 22,8g  <strong>Lipides:</strong> 23,4g  <strong>Protéines:</strong> 4,2g</p>
+    <p><strong>Total Calories (par portion):</strong> 323 cal</p>
+    <section>
+        <h2>Ingrédients (pour 8 fondants)</h2>
+        <ul>
+            <li>200g de chocolat noir</li>
+            <li>130g de beurre</li>
+            <li>3 œufs</li>
+            <li>60g de sucre blanc</li>
+            <li>24g de farine blanche</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Les étapes à suivre:</h2>
+        <ol>
+            <li>Dans une casserole, couper en morceaux le beurre et le chocolat.</li>
+            <li>Mettre la casserole à chauffer à feu doux, puis mélanger jusqu'à ce que le chocolat et le beurre soit bien fondues. Retirer ensuite la casserole du feu.</li>
+            <li>Dans un récipient, ajouter les œufs et le sucre. Fouetter jusqu'à ce que le mélange soit un peu plus épais. </li>
+            <li>Incorporer le chocolat dans le mélange précédent puis mélanger.</li>
+            <li>Ajouter ensuite la farine et mélanger.</li>
+            <li>Chemiser vos moules : graisser l'intérieur avec du beurre puis recouvrir l'ensemble de farine (ou de cacao). Une fois chemiser, retirer l'excédent de farine.</li>
+            <li>Remplir les moules avec l'appareil à fondant jusqu'au 2/3.</li>
+            <li>Placer les moules au four à 180°C pendant 7 à 9 minutes si votre appareil est à température ambiante. S'il était au frigo, laisser les fondants cuir entre 12 à 14 minutes.</li>
+            <p><strong>Plus le fondant reste au four, moins il sera coulant.</strong></p>
+            <p><em>Astuce pour démouler un fondant :mettre le moule dans sa main sur un torchon, placer une assiette sur le haut du moule, et enfin retourner le moule et l'assiette avant de retirer le moule.</em></p>
+        </ol>
+    </section>
 </body>
 </html>
