feat : add cookies.html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
         <img src="./img/brownies.jpg" alt="Des brownies très moelleux" height="180" width="180">
         <p><a href="./recipes/brownies.html" target="_blank">Recette des brownies</a></p>
     </section>
+    <section>
+        <h3>Cookies au chocolat</h3>
+        <img src="./img/cookies.jpg" alt="Des cookies très moelleux" height="180" width="140">
+        <p><a href="./recipes/cookies.html" target="_blank">Recette des cookies</a></p>
+    </section>
+
 </body>
 </html>
