--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -6,6 +6,7 @@
     <title>Brownies au chocolat</title>
 </head>
 <body>
-    
+    <h1>Brownies au chocolat</h1>
+    <img src="../img/brownies.jpg" alt="Des brownies très moelleux" height="380" width="380">
 </body>
 </html>
