doc : add a precison in the recipe

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -32,7 +32,7 @@
             <li>Dans un récipient, mélanger le beurre, le sucre et le sucre vanillé.</li>
             <li>Ensuite, ajouter les œufs puis mélanger de nouveau.</li>
             <li>Ajouter ensuite la farine, la levure et le sel puis mélanger.</li>
-            <li>Pour terminer, incorporer les pépites de chocolat.</li>
+            <li>Pour terminer, incorporer les pépites de chocolat. Prendre soit des pépites classiques ou alors découper une tablette de chocolat en pépite.</li>
             <li>Une fois l'appareil à cookies bien mélanger, laisser refroidir dans le frigo une petite heure. Cela facilitera le façonnage des boules.</li>
             <li>Une fois la pâte suffisamment refroidie, faire de petites boules et les placer sur une plaque recouverte de papier sulfurisé. Aplatir légèrement la boule.  </li>
             <li>Enfourner à 180° pendant 10 à 15 min (suivant la texture désirer). Puis laisser refroidir sur une grille.</li>
