--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,5 +8,34 @@
 <body>
     <h1>Brownies au chocolat</h1>
     <img src="../img/brownies.jpg" alt="Des brownies très moelleux" height="380" width="380">
+    <p>Des brownies extrêmement moelleux pour le dessert.</p>
+    <p><strong>Glucides:</strong> 33,8g  <strong>Lipides:</strong> 14,4g  <strong>Protéines:</strong> 3,6g</p>
+    <p><strong>Total Calories (par portion):</strong> 284 cal</p>
+    <section>
+        <h2>Les ingrédients (pour 12 portions):</h2>
+        <ul>
+            <li>100g de farine</li>
+            <li>75g de sucre blanc</li>
+            <li>100g de sucre cassonade</li>
+            <li>3 œufs</li>
+            <li>200g de chocolat</li>
+            <li>75g de cacao</li>
+            <li>105g de beurre</li>
+            <li>10g de vanille</li>
+            <li>5g de sel (facultatif si beuure salé)</li>
+            <li>7g de café (facultatif, pour le goût)</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Les étapes à suivre:</h2>
+        <ol>
+            <li>Dans une casserole, mettre le beurre et le chocolat coupés en morceaux (et le café) à chauffer sur feu doux. Retirer du feu une fois fondue.</li>
+            <li>Dans un autre récipient, mélanger les œufs, le sucre et la vanille.</li>
+            <li>Ajouter ensuite le chocolat fondue puis mélanger.</li>
+            <li>Dans un saladier à part, mélanger ensemble la farine et le cacao avant des les incorporer au mélange précédent.</li>
+            <li>Une fois l'ensemble de votre appareil bien mélanger, verser et lisser la préparation dans un moule recouvert de papier sulfurisé. Tapoter le moule sur la table pour bien uniformiser.</li>
+            <li>Enfourner à 180°C pendant 24 à 26 minutes. Laisser refroidir avant de servir. Pour faciliter la découpe, il est possible de tremper le couteau dans l'eau chaude avant chaque découpe.</li>
+        </ol>
+    </section>
 </body>
 </html>
