feat : add some css on the pages
change the font size, center the list and add a home button
update the pancake recipe

--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <section>
-        <h3>Healthy pancakes</h3>
-        <img src="./img/pancake.jpg" alt="De délicieux pancakes diététiques" height="180" width="140" >
-        <p><a href="./recipes/pancake.html" target="_blank">Recette des pancakes</a></p>
-    </section>
-    <section>
-        <h3>Fondant au chocolat</h3>
-        <img src="./img/lavacake.jpg" alt="Un fondant au chocolat extrêmement savoureux" height="180" width="200">
-        <p><a href="./recipes/fondant.html" target="_blank">Recette du fondant au chocolat</a></p>
-    </section>
-    <section>
-        <h3>Brownies au chocolat</h3>
-        <img src="./img/brownies.jpg" alt="Des brownies très moelleux" height="180" width="180">
-        <p><a href="./recipes/brownies.html" target="_blank">Recette des brownies</a></p>
-    </section>
-    <section>
-        <h3>Cookies au chocolat</h3>
-        <img src="./img/cookies.jpg" alt="Des cookies très moelleux" height="180" width="140">
-        <p><a href="./recipes/cookies.html" target="_blank">Recette des cookies</a></p>
-    </section>
-
+    <div class="recipe">
+        <h1>Odin Recipes</h1>
+        <section>
+            <h3>Healthy pancakes</h3>
+            <img src="./img/pancake.jpg" alt="De délicieux pancakes diététiques" height="180" width="140" >
+            <p class="recipe-link"><a href="./recipes/pancake.html">Recette des pancakes</a></p>
+        </section>
+        <section>
+            <h3>Fondant au chocolat</h3>
+            <img src="./img/lavacake.jpg" alt="Un fondant au chocolat extrêmement savoureux" height="180" width="200">
+            <p class="recipe-link"><a href="./recipes/fondant.html">Recette du fondant au chocolat</a></p>
+        </section>
+        <section>
+            <h3>Brownies au chocolat</h3>
+            <img src="./img/brownies.jpg" alt="Des brownies très moelleux" height="180" width="180">
+            <p class="recipe-link"><a href="./recipes/brownies.html">Recette des brownies</a></p>
+        </section>
+        <section>
+            <h3>Cookies au chocolat</h3>
+            <img src="./img/cookies.jpg" alt="Des cookies très moelleux" height="180" width="140">
+            <p class="recipe-link"><a href="./recipes/cookies.html">Recette des cookies</a></p>
+        </section>
+    </div>
 </body>
 </html>
