--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -15,7 +15,7 @@
     <p><strong>Total Calories (par portion):</strong> 284 cal</p>
     <section>
         <h2>Les ingrédients (pour 12 portions):</h2>
-        <ul>
+        <ul class="ingredient-list">
             <li>100g de farine</li>
             <li>75g de sucre blanc</li>
             <li>100g de sucre cassonade</li>
@@ -30,7 +30,7 @@
     </section>
     <section>
         <h2>Les étapes à suivre:</h2>
-        <ol>
+        <ol class="step-list">
             <li>Dans une casserole, mettre le beurre et le chocolat coupés en morceaux (et le café) à chauffer sur feu doux. Retirer du feu une fois fondue.</li>
             <li>Dans un autre récipient, mélanger les œufs, le sucre et la vanille.</li>
             <li>Ajouter ensuite le chocolat fondue puis mélanger.</li>
@@ -39,5 +39,8 @@
             <li>Enfourner à 180°C pendant 24 à 26 minutes. Laisser refroidir avant de servir. Pour faciliter la découpe, il est possible de tremper le couteau dans l'eau chaude avant chaque découpe.</li>
         </ol>
     </section>
+    <p class="menu-button">
+        <a href="../index.html" title="Page d'accueil" >Retour à la page d'accueil</a>
+    </p>
 </body>
 </html>
