--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookies au chocolat</title>
+    <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <h1>Cookies au chocolat</h1>
@@ -13,7 +15,7 @@
     <p><strong>Total Calories (pour 1 cookie):</strong> 174 cal</p>
     <section>
         <h2>Ingrédients (pour 20 cookies)</h2>
-        <ul>
+        <ul class="ingredient-list">
             <li>300g de farine</li>
             <li>50g de sucre blanc</li>
             <li>50g de vergeoise (ou sucre cassonade)</li>
@@ -28,7 +30,7 @@
     <section>
         <h2>Les étapes à suivre:</h2>
         <p>Pour cette recette le beurre doit être bien mou et non pas fondu.</p>
-        <ol>
+        <ol class="step-list">
             <li>Dans un récipient, mélanger le beurre, le sucre et le sucre vanillé.</li>
             <li>Ensuite, ajouter les œufs puis mélanger de nouveau.</li>
             <li>Ajouter ensuite la farine, la levure et le sel puis mélanger.</li>
@@ -38,5 +40,8 @@
             <li>Enfourner à 180° pendant 10 à 15 min (suivant la texture désirer). Puis laisser refroidir sur une grille.</li>
         </ol>
     </section>
+    <p class="menu-button">
+        <a href="../index.html" title="Page d'accueil" >Retour à la page d'accueil</a>
+    </p>
 </body>
 </html>
