--- a/recipes/fondant.html
+++ b/recipes/fondant.html
@@ -15,7 +15,7 @@
     <p><strong>Total Calories (par portion):</strong> 323 cal</p>
     <section>
         <h2>Ingrédients (pour 8 fondants)</h2>
-        <ul>
+        <ul class="ingredient-list">
             <li>200g de chocolat noir</li>
             <li>130g de beurre</li>
             <li>3 œufs</li>
@@ -25,7 +25,7 @@
     </section>
     <section>
         <h2>Les étapes à suivre:</h2>
-        <ol>
+        <ol class="step-list">
             <li>Dans une casserole, couper en morceaux le beurre et le chocolat.</li>
             <li>Mettre la casserole à chauffer à feu doux, puis mélanger jusqu'à ce que le chocolat et le beurre soit bien fondues. Retirer ensuite la casserole du feu.</li>
             <li>Dans un récipient, ajouter les œufs et le sucre. Fouetter jusqu'à ce que le mélange soit un peu plus épais. </li>
@@ -38,5 +38,8 @@
             <p><em>Astuce pour démouler un fondant :mettre le moule dans sa main sur un torchon, placer une assiette sur le haut du moule, et enfin retourner le moule et l'assiette avant de retirer le moule.</em></p>
         </ol>
     </section>
+    <p class="menu-button">
+        <a href="../index.html" title="Page d'accueil" >Retour à la page d'accueil</a>
+    </p>
 </body>
 </html>
