--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -10,25 +10,24 @@
     <h1>Healthy pancakes</h1>
     <img src="../img/pancake.jpg" alt="De délicieux pancakes diététiques" height="400" width="350">
     <p>Des pancakes pour un régime alimentaire sain et équilibré.</p>
-    <p><strong>Glucides:</strong> 59,4g  <strong>Lipides:</strong> 15,5g  <strong>Protéines:</strong> 36,4g</p>
-    <p><strong>Total Calories:</strong> 532 cal</p>
+    <p><strong>Glucides:</strong> 58.4g  <strong>Lipides:</strong> 10.5g  <strong>Protéines:</strong> 30.4g</p>
+    <p><strong>Total Calories:</strong> 462 cal</p>
     <section>
         <h2>Ingrédients (pour 6 pancakes)</h2>
-        <ul>
-            <li>75g de flocon d'avoine ou de farine d'avoine</li>
-            <li>100g de blanc d'œuf</li>
-            <li>1 jaune d'œuf</li>
-            <li>155g de fromage blanc (ou de yaourt grec)</li>
-            <li>5g de levure chimique</li>
-            <li>10ml d'extrait de vanille ou 5ml d'alcool de votre choix (Rhum, bière, eau de vie, etc) suivant votre préférence de goût</li>
-            <li>Du beurre ou de l'huile pour la cuisson</li>
-        </ul>
+            <ul class="ingredient-list">
+                <li>75g de flocon d'avoine ou de farine d'avoine</li>
+                <li>100g de blanc d'œuf</li>
+                <li>155g de fromage blanc (ou de yaourt grec)</li>
+                <li>5g de levure chimique</li>
+                <li>10ml d'extrait de vanille ou 5ml d'alcool de votre choix (Rhum, bière, eau de vie, etc)</li>
+                <li>Du beurre ou de l'huile pour la cuisson</li>
+            </ul>
     </section>
     <section>
         <h2>Les étapes à suivre:</h2>
-        <ol>
+        <ol class="step-list">
             <li>Dans un mixeur, ajouter les flocons d'avoines et la levure.</li>
-            <li>Incorporer ensuite les blancs et le jaune d'œufs.</li>
+            <li>Incorporer ensuite les blancs d'œufs.</li>
             <li>Ajouter ensuite le fromage blanc.</li>
             <li>Pour terminer, verser la vanille puis laisser mélanger 30sec à 1 minutes.</li>
             <li>Faire bien chauffer la poêle puis la graisser légèrement.</li>
@@ -37,6 +36,7 @@
             <li>Une fois cuit, servir avec l'accompagnement de votre choix (sirop d'érable, pâte à tartiner, etc).</li>
         </ol>
     </section>
-    
-</body>
+    <p class="menu-button">
+        <a href="../index.html" title="Page d'accueil" >Retour à la page d'accueil</a>
+    </p>
 </html>
